# pironman5

./: .gitignore  LICENSE  README.md  pyproject.toml
deploy/: install.sh  pironman5.service  pironman5.sudoers
pironman5/: __init__.py  cli.py  config.py  core.py  logger.py
pironman5/hardware/: __init__.py  fan.py  gpio.py  oled.py  rgb.py
pironman5/history/: store.py
pironman5/metrics/: __init__.py  status.py
pironman5/web/: __init__.py  api.py  server.py
pironman5/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_config.py  test_history.py
