[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pironman5"
version = "0.1.0"
description = "Single-device service for the Pironman 5 case on a Raspberry Pi 5"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-only" }

# Base deps: enough to run the service + web UI (mock mode runs anywhere).
dependencies = [
    "psutil>=5.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "Pillow>=10.0",
]

[project.optional-dependencies]
# Pi-only hardware backends. Installed on the device by install.sh.
hardware = [
    "rpi.lgpio>=0.6",
    "smbus2>=0.4",
    "adafruit-blinka>=8.0",
    "adafruit-circuitpython-neopixel-spi>=1.0",
    "evdev>=1.6",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
pironman5 = "pironman5.cli:main"

[tool.setuptools.packages.find]
include = ["pironman5*"]

[tool.setuptools.package-data]
pironman5 = ["web/static/*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
# Turn warnings into errors so the suite stays clean, but ignore the third-party
# deprecation raised by Starlette's TestClient using httpx (not our code).
filterwarnings = [
    "error",
    "ignore:Using `httpx`:Warning",
]
